[project]
name = "cosmo_ml_tools"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "An attempt to wrap many useful python packagages, ML algorithms and automate common workflows in Cosmology."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "cosmo_ml_tools",
]
license = {text = "MIT License"}
authors = [
  {name = "Rodrigo Calderon, Ph.D.", email = "calderon.cosmology@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
cosmo_ml_tools = "cosmo_ml_tools.cli:main"

[project.optional-dependencies]
all = [
    "cosmo_ml_tools[extra]",
]

extra = [
    "pandas","cobaya","numpyro","harmonic","classy"
]


[tool]
[tool.setuptools.packages.find]
include = ["cosmo_ml_tools*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "cosmo_ml_tools/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/rcalderonb6/cosmo-ml-tools"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"